<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.psu.gsa5054.comicvine.SelectedItem">

    <ImageView
        android:id="@+id/selectedCharacterImage"
        android:layout_width="149dp"
        android:layout_height="199dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/characterImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedItemToolbar" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/selectedItemToolbar"
        android:layout_width="0dp"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/Aquamarine"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/characterNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/characterName"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
        app:layout_constraintStart_toEndOf="@+id/selectedCharacterImage"
        app:layout_constraintTop_toBottomOf="@+id/selectedItemToolbar" />

    <TextView
        android:id="@+id/publisherTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/publisherName"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
        app:layout_constraintStart_toEndOf="@+id/selectedCharacterImage"
        app:layout_constraintTop_toBottomOf="@+id/characterNameTextView" />

    <TextView
        android:id="@+id/issuesAppearedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/issuesAppeared"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
        app:layout_constraintStart_toEndOf="@+id/selectedCharacterImage"
        app:layout_constraintTop_toBottomOf="@+id/publisherTextView" />

    <TextView
        android:id="@+id/firstAppearanceTextView"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/firstAppearance"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedCharacterImage" />

    <TextView
        android:id="@+id/characterSummaryTextView"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/characterSummary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstAppearanceTextView" />

</android.support.constraint.ConstraintLayout>
